@@ -486,6 +486,16 @@ $wgEXIFMessages = array(
 	'exif-lightsource-19',
 	'exif-lightsource-24',
 	'exif-lightsource-255',
+	'exif-flash-fired-0' ,
+	'exif-flash-fired-1' ,
+	'exif-flash-return-0' ,
+	'exif-flash-return-2' ,
+	'exif-flash-return-3' ,
+	'exif-flash-mode-1' ,
+	'exif-flash-mode-2' ,
+	'exif-flash-mode-3' ,
+	'exif-flash-function-1' ,
+	'exif-flash-redeye-1' ,
 	'exif-focalplaneresolutionunit-2',
 	'exif-sensingmethod-1',
 	'exif-sensingmethod-2',
