@@ -2341,6 +2341,18 @@ $wgMessageStructure = array(
 		'exif-lightsource-24',
 		'exif-lightsource-255',
 	),
+	'exif-flash' => array(
+		'exif-flash-fired-0' ,
+		'exif-flash-fired-1' ,
+		'exif-flash-return-0' ,
+		'exif-flash-return-2' ,
+		'exif-flash-return-3' ,
+		'exif-flash-mode-1' ,
+		'exif-flash-mode-2' ,
+		'exif-flash-mode-3' ,
+		'exif-flash-function-1' ,
+		'exif-flash-redeye-1' ,
+	),
 	'exif-focalplaneresolutionunit' => array(
 		'exif-focalplaneresolutionunit-2',
 	),
@@ -2821,6 +2833,7 @@ Variants for Chinese language",
 	'exif-subjectdistance-value'     => '',
 	'exif-meteringmode'              => '',
 	'exif-lightsource'               => '',
+	'exif-flash'                     => 'Flash modes',
 	'exif-focalplaneresolutionunit'  => '',
 	'exif-sensingmethod'             => '',
 	'exif-filesource'                => '',
